#771: remove driver property when 'downloadDriver' flag is set