@@ -2,13 +2,13 @@
  * Orignal work: Copyright 2015 www.seleniumtests.com
  * Modified work: Copyright 2016 www.infotel.com
  * 				Copyright 2017-2019 B.Hecquet
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
+ * <p>
  * 	http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -23,17 +23,15 @@ import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
+import com.seleniumtests.browserfactory.EdgeCapabilitiesFactory;
 import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.Platform;
 import org.openqa.selenium.Proxy;
+import org.openqa.selenium.edge.EdgeDriverService;
 import org.openqa.selenium.ie.InternetExplorerDriver;
 import org.openqa.selenium.ie.InternetExplorerDriverService;
 import org.openqa.selenium.remote.CapabilityType;
@@ -58,7 +56,6 @@ import com.seleniumtests.util.osutility.OSUtilityWindows;
 import com.sun.jna.platform.win32.Advapi32Util;
 import com.sun.jna.platform.win32.WinReg.HKEY;
 
-// TODO: enable test on linux platform using mocks
 public class TestIECapabilityFactory extends MockitoTest {
 
 	@Mock
@@ -73,27 +70,27 @@ public class TestIECapabilityFactory extends MockitoTest {
 	@Mock
 	private OSUtilityWindows osUtility;
 
-	private MockedStatic mockedOsUtility;
-	private MockedStatic mockedOsUtilityFactory;
+	private MockedStatic<OSUtility> mockedOsUtility;
+	private MockedStatic<OSUtilityFactory> mockedOsUtilityFactory;
 
 	@BeforeMethod(groups= {"ut"})
 	public void init() {
 		
-		Map<BrowserType, List<BrowserInfo>> browserInfos = new HashMap<>();
-		browserInfos.put(BrowserType.INTERNET_EXPLORER, Arrays.asList(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
+		Map<BrowserType, List<BrowserInfo>> browserInfos = new EnumMap<>(BrowserType.class);
+		browserInfos.put(BrowserType.INTERNET_EXPLORER, List.of(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
 
 		mockedOsUtility = mockStatic(OSUtility.class);
 		mockedOsUtility.when(() -> OSUtility.getInstalledBrowsersWithVersion(false)).thenReturn(browserInfos);
-		mockedOsUtility.when(() -> OSUtility.getCurrentPlatorm()).thenReturn(Platform.WINDOWS);
+		mockedOsUtility.when(OSUtility::getCurrentPlatorm).thenReturn(Platform.WINDOWS);
 
 		mockedOsUtilityFactory = mockStatic(OSUtilityFactory.class);
-		mockedOsUtilityFactory.when(() -> OSUtilityFactory.getInstance()).thenReturn(osUtility);
+		mockedOsUtilityFactory.when(OSUtilityFactory::getInstance).thenReturn(osUtility);
 		
 		when(osUtility.getProgramExtension()).thenReturn(".exe");
 		
 		when(config.getTestContext()).thenReturn(context);
 		when(config.getMode()).thenReturn(DriverMode.LOCAL);
-		when(config.getDebug()).thenReturn(Arrays.asList(DebugMode.NONE));
+		when(config.getDebug()).thenReturn(List.of(DebugMode.NONE));
 		
 	}
 
@@ -207,7 +204,7 @@ public class TestIECapabilityFactory extends MockitoTest {
 	
 	@Test(groups={"ut"})
 	public void testCreateIECapabilitiesStandardDriverPathLocal() {
-		try (MockedStatic mockedAdvapi = mockStatic(Advapi32Util.class)) {
+		try (MockedStatic<Advapi32Util> mockedAdvapi = mockStatic(Advapi32Util.class)) {
 			mockedAdvapi.when(() -> Advapi32Util.registryGetValue(any(HKEY.class), anyString(), anyString())).thenReturn("1");
 			
 			new IECapabilitiesFactory(config).createCapabilities();
@@ -220,7 +217,7 @@ public class TestIECapabilityFactory extends MockitoTest {
 	
 	@Test(groups={"ut"})
 	public void testCreateIECapabilitiesOverrideDriverPathLocal() {
-		try (MockedStatic mockedAdvapi = mockStatic(Advapi32Util.class)) {
+		try (MockedStatic<Advapi32Util> mockedAdvapi = mockStatic(Advapi32Util.class)) {
 			mockedAdvapi.when(() -> Advapi32Util.registryGetValue(any(HKEY.class), anyString(), anyString())).thenReturn("1");
 			when(config.getIeDriverPath()).thenReturn("/opt/ie/driver/ie");
 			
@@ -252,9 +249,9 @@ public class TestIECapabilityFactory extends MockitoTest {
 		when(config.getIeMode()).thenReturn(true);
 		when(config.getInitialUrl()).thenReturn("http://mysite");
 		
-		Map<BrowserType, List<BrowserInfo>> browserInfos = new HashMap<>();
-		browserInfos.put(BrowserType.INTERNET_EXPLORER, Arrays.asList(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
-		browserInfos.put(BrowserType.EDGE, Arrays.asList(new BrowserInfo(BrowserType.EDGE, "97.0", "", false)));
+		Map<BrowserType, List<BrowserInfo>> browserInfos = new EnumMap<>(BrowserType.class);
+		browserInfos.put(BrowserType.INTERNET_EXPLORER, List.of(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
+		browserInfos.put(BrowserType.EDGE, List.of(new BrowserInfo(BrowserType.EDGE, "97.0", "", false)));
 		mockedOsUtility.when(() -> OSUtility.getInstalledBrowsersWithVersion(false)).thenReturn(browserInfos);
 		
 		MutableCapabilities capa = new IECapabilitiesFactory(config).createCapabilities();
@@ -281,9 +278,9 @@ public class TestIECapabilityFactory extends MockitoTest {
 		when(config.getMode()).thenReturn(DriverMode.GRID);
 		when(config.getInitialUrl()).thenReturn("http://mysite");
 		
-		Map<BrowserType, List<BrowserInfo>> browserInfos = new HashMap<>();
-		browserInfos.put(BrowserType.INTERNET_EXPLORER, Arrays.asList(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
-		browserInfos.put(BrowserType.EDGE, Arrays.asList(new BrowserInfo(BrowserType.EDGE, "97.0", "", false)));
+		Map<BrowserType, List<BrowserInfo>> browserInfos = new EnumMap<>(BrowserType.class);
+		browserInfos.put(BrowserType.INTERNET_EXPLORER, List.of(new BrowserInfo(BrowserType.INTERNET_EXPLORER, "11", "", false)));
+		browserInfos.put(BrowserType.EDGE, List.of(new BrowserInfo(BrowserType.EDGE, "97.0", "", false)));
 		mockedOsUtility.when(() -> OSUtility.getInstalledBrowsersWithVersion(false)).thenReturn(browserInfos);
 		
 		MutableCapabilities capa = new IECapabilitiesFactory(config).createCapabilities();
